--- a/1. Линейное пространство. Основные понятия..ipynb
+++ b/1. Линейное пространство. Основные понятия..ipynb
@@ -17,8 +17,9 @@
     "\n",
     "**Решение**  \n",
     "\n",
-    "$f_{3}(x) = x + f_{2}(x)$  \n",
-    "$f_{4}(x) = x - f_{1}(x)$"
+    "$f_{4}(x) = f_{3}(x) - f_{2}(x) - f_{1}(x) = x + 1 - 1 - e^{x} = x - e^{x}$\n",
+    "\n",
+    "Векторы линейно зависимы."
    ]
   },
   {
@@ -30,8 +31,9 @@
     "\n",
     "**Решение**  \n",
     "\n",
-    "$f_{3}(x) = f_{2}(x)^{f_{1}(x)}$  \n",
-    "$f_{4}(x) = (f_{2}(x) + \\frac{1}{2}f_{1}(x))^{f_{1}(x)}$"
+    "$f_{4}(x) = f_{3}(x) + 2f_{2}(x) + 0.5f_{1}(x) = x^2 + 2x + 1 = (x + 1)^2$\n",
+    "\n",
+    "Векторы линейно зависимы."
    ]
   },
   {
@@ -42,7 +44,7 @@
     "\n",
     "**Решение**\n",
     "\n",
-    "x = (2, 3, 5) = 1/2 $\\cdot$ (0, 0, 10) + 1 $\\cdot$ (2, 0, 0) + 3 $\\cdot$ (0, 1, 0) = (1/2, 1, 3)"
+    "x = (2, 3, 5) = 0.5 $\\cdot$ (0, 0, 10) + 1 $\\cdot$ (2, 0, 0) + 3 $\\cdot$ (0, 1, 0) = (0.5, 1, 3)"
    ]
   },
   {
@@ -57,9 +59,9 @@
     "   \n",
     "**Pешение**\n",
     "\n",
-    " а) (2, 2, 3)\n",
+    " а) (2, -2, 3)\n",
     " \n",
-    " б) (3, 2, 1)"
+    " б) (3, -2, 0)"
    ]
   },
   {
@@ -76,9 +78,10 @@
     "\n",
     "a) совокупность всех векторов трехмерного пространства = $(0, a, b)$\n",
     "\n",
-    "$$(0, a, b)+(0, c, d) = (0, a+c, b+d),$$ $$\\lambda\\cdot (0, a, b) = (0, \\lambda a, \\lambda b).$$\n",
+    "$$(0, a, b)+(с, 0, d) = (с, a, b+d),$$\n",
+    "$$\\lambda\\cdot (0, a, b) = (0, \\lambda a, \\lambda b).$$\n",
     "\n",
-    "Полученные векторы также принадлежат множеству всех векторов вида $(0, a, b)$, то есть данное множество является подпространством линейного пространства.\n"
+    "Полученные векторы не принадлежат множеству всех векторов вида $(0, a, b)$, то есть данное множество не является подпространством линейного пространства."
    ]
   },
   {
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +157,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([4, 2, 4])\n",
+    "b = np.array([12, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1 норма вектора a: 10.0\n",
+      "l1 норма вектора b: 19.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'l1 норма вектора a: {norm(a, ord=1)}')\n",
+    "print(f'l1 норма вектора b: {norm(b, 1)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,19 +194,30 @@
      "output_type": "stream",
      "text": [
       "l2 норма вектора a: 6.0\n",
-      "l2 норма вектора b: 13.0\n",
+      "l2 норма вектора b: 13.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'l2 норма вектора a: {norm(a, ord=2)}')\n",
+    "print(f'l2 норма вектора b: {norm(b, 2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Косинус угла между a и b: 0.90\n",
       "Угол между a и b: 0.46\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([4, 2, 4])\n",
-    "print(f'l2 норма вектора a: {norm(a, ord=2)}')\n",
-    "\n",
-    "b = np.array([12, 3, 4])\n",
-    "print(f'l2 норма вектора b: {norm(b, 2)}')\n",
-    "\n",
     "cos_phi = np.dot(a, b) / norm(a) / norm(b)\n",
     "print(f'Косинус угла между a и b: {cos_phi:.2f}')\n",
     "print(f'Угол между a и b: {np.arccos(cos_phi):.2f}')"
@@ -205,15 +248,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verify(let, x, y, z = ' '):\n",
+    "    \n",
+    "    if type(z) != str:\n",
+    "        scal = np.dot(x, y) + np.dot(x, z)\n",
+    "        norm_z = np.round(norm(z), 2)\n",
+    "    else:\n",
+    "        scal = np.dot(x, y)\n",
+    "        norm_z = 1\n",
+    "\n",
+    "    norm_x = np.round(norm(x), 2)\n",
+    "    norm_y = np.round(norm(y), 2)\n",
+    "\n",
+    "    if scal == 0 and norm_x == 1 and norm_y == 1 and norm_z == 1:\n",
+    "        print(f'{let}) Векторы образуют ортонормированный базис в линейном пространстве R3, потому как:')\n",
+    "    else:\n",
+    "        print(f'{let}) Векторы НЕ образуют ортонормированный базис в линейном пространстве R3, потому как:')   \n",
+    "\n",
+    "    print(f'скалярное произведение = {scal}')\n",
+    "    print(f'l2 норма вектора x = {norm_x}')\n",
+    "    print(f'l2 норма вектора y = {norm_y}')\n",
+    "    if type(z) != str:\n",
+    "        print(f'l2 норма вектора z = {norm_z}')\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "а) Векторы образуют ортонормированный базис в линейном пространстве R2, потому как:\n",
-      "скалярное произведение x и y = 0\n",
+      "a) Векторы образуют ортонормированный базис в линейном пространстве R3, потому как:\n",
+      "скалярное произведение = 0\n",
       "l2 норма вектора x = 1.0\n",
       "l2 норма вектора y = 1.0\n"
      ]
@@ -223,33 +298,22 @@
     "x_a = np.array([1, 0, 0])\n",
     "y_a = np.array([0, 0, 1])\n",
     "\n",
-    "scal_a = np.dot(x_a, y_a)\n",
-    "norm_x_a = norm(x_a)\n",
-    "norm_y_a = norm(y_a)\n",
-    "\n",
-    "if scal_a == 0 and norm_x_a == 1 and norm_y_a == 1:\n",
-    "    print(f'а) Векторы образуют ортонормированный базис в линейном пространстве R2, потому как:')\n",
-    "else:\n",
-    "    print(f'а) Векторы НЕ образуют ортонормированный базис в линейном пространстве R2, потому как:')   \n",
-    "\n",
-    "print(f'скалярное произведение x и y = {scal_a}')\n",
-    "print(f'l2 норма вектора x = {norm_x_a}')\n",
-    "print(f'l2 норма вектора y = {norm_y_a}')"
+    "verify('a', x_a, y_a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "б) Векторы НЕ образуют ортонормированный базис в линейном пространстве R3, потому как:\n",
-      "скалярное произведение x и y = 0.0\n",
-      "l2 норма вектора x = 0.9999999999999999\n",
-      "l2 норма вектора y = 0.9999999999999999\n",
+      "б) Векторы образуют ортонормированный базис в линейном пространстве R3, потому как:\n",
+      "скалярное произведение = 0.0\n",
+      "l2 норма вектора x = 1.0\n",
+      "l2 норма вектора y = 1.0\n",
       "l2 норма вектора z = 1.0\n"
      ]
     }
@@ -259,25 +323,12 @@
     "y_b = np.array([1/2**0.5, 1/2**0.5, 0])\n",
     "z_b = np.array([0, 0, 1])\n",
     "\n",
-    "scal_b = np.dot(x_b, y_b) + np.dot(x_b, z_b)\n",
-    "norm_x_b = norm(x_b)\n",
-    "norm_y_b = norm(y_b)\n",
-    "norm_z_b = norm(z_b)\n",
-    "\n",
-    "if scal_b == 0 and norm_x_b == 1 and norm_y_b == 1 and norm_z_b == 1:\n",
-    "    print(f'б) Векторы образуют ортонормированный базис в линейном пространстве R3, потому как:')\n",
-    "else:\n",
-    "    print(f'б) Векторы НЕ образуют ортонормированный базис в линейном пространстве R3, потому как:')   \n",
-    "\n",
-    "print(f'скалярное произведение x и y = {scal_b}')\n",
-    "print(f'l2 норма вектора x = {norm_x_b}')\n",
-    "print(f'l2 норма вектора y = {norm_y_b}')\n",
-    "print(f'l2 норма вектора z = {norm_z_b}')"
+    "verify('б', x_b, y_b, z_b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -285,9 +336,9 @@
      "output_type": "stream",
      "text": [
       "в) Векторы НЕ образуют ортонормированный базис в линейном пространстве R3, потому как:\n",
-      "скалярное произведение x и y = -0.25\n",
-      "l2 норма вектора x = 0.7071067811865476\n",
-      "l2 норма вектора y = 0.7071067811865476\n",
+      "скалярное произведение = -0.25\n",
+      "l2 норма вектора x = 0.71\n",
+      "l2 норма вектора y = 0.71\n",
       "l2 норма вектора z = 1.0\n"
      ]
     }
@@ -297,25 +348,12 @@
     "y_c = np.array([0, 1/2, 1/2])\n",
     "z_c = np.array([0, 0, 1])\n",
     "\n",
-    "scal_c = np.dot(x_c, y_c) + np.dot(x_c, z_c)\n",
-    "norm_x_c = norm(x_c)\n",
-    "norm_y_c = norm(y_c)\n",
-    "norm_z_c = norm(z_c)\n",
-    "\n",
-    "if scal_c == 0 and norm_x_c == 1 and norm_y_c == 1 and norm_z_c == 1:\n",
-    "    print(f'в) Векторы образуют ортонормированный базис в линейном пространстве R3, потому как:')\n",
-    "else:\n",
-    "    print(f'в) Векторы НЕ образуют ортонормированный базис в линейном пространстве R3, потому как:')   \n",
-    "\n",
-    "print(f'скалярное произведение x и y = {scal_c}')\n",
-    "print(f'l2 норма вектора x = {norm_x_c}')\n",
-    "print(f'l2 норма вектора y = {norm_y_c}')\n",
-    "print(f'l2 норма вектора z = {norm_z_c}')"
+    "verify('в', x_c, y_c, z_c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +361,7 @@
      "output_type": "stream",
      "text": [
       "г) Векторы образуют ортонормированный базис в линейном пространстве R3, потому как:\n",
-      "скалярное произведение x и y = 0\n",
+      "скалярное произведение = 0\n",
       "l2 норма вектора x = 1.0\n",
       "l2 норма вектора y = 1.0\n",
       "l2 норма вектора z = 1.0\n"
@@ -335,20 +373,7 @@
     "y_d = np.array([0, 1, 0])\n",
     "z_d = np.array([0, 0, 1])\n",
     "\n",
-    "scal_d = np.dot(x_d, y_d) + np.dot(x_d, z_d)\n",
-    "norm_x_d = norm(x_d)\n",
-    "norm_y_d = norm(y_d)\n",
-    "norm_z_d = norm(z_d)\n",
-    "\n",
-    "if scal_d == 0 and norm_x_d == 1 and norm_y_d == 1 and norm_z_d == 1:\n",
-    "    print(f'г) Векторы образуют ортонормированный базис в линейном пространстве R3, потому как:')\n",
-    "else:\n",
-    "    print(f'г) Векторы НЕ образуют ортонормированный базис в линейном пространстве R3, потому как:')   \n",
-    "\n",
-    "print(f'скалярное произведение x и y = {scal_d}')\n",
-    "print(f'l2 норма вектора x = {norm_x_d}')\n",
-    "print(f'l2 норма вектора y = {norm_y_d}')\n",
-    "print(f'l2 норма вектора z = {norm_z_d}')"
+    "verify('г', x_d, y_d, z_d)"
    ]
   },
   {
